# learn_rust

./: .gitignore  Cargo.toml  README.md  deny.toml
assets/: 抽卡配置表.xlsx
src/: lib.rs  main.rs  opts.rs  process.rs
