[package]
name = "rcli"
version = "0.1.0"
edition = "2024"
authors = ["xt <dataying@gmail.com>"]
license = "MIT"

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.49", features = ["derive"] }
csv = "1.4.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
serde_yaml = "0.9.34"
toml = "0.9.8"
